# splatnet_pytorch

./: .gitignore  CMakeLists.txt  README.md  train_seg.py
data/: augmentation.py  modelnet.py  shapenet.py
models/: splatnet.py
utils/: CMakeLists.txt  permutohedral_lattice_gpu.cu  permutohedral_lattice_layer.py  permutohedral_lattice_wrapper.cc
utils/include/: cuda_headers.h  cuda_utils.h  permutohedral_lattice.h
